changed path correctly

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="about-container">
           <img
             class="about-image"
-            src="./images/sectionAbout.jpg"
+            src="./images/section-about.jpg"
             alt="портрет девушки"
             width="600"
             height="794.12"
@@ -439,7 +439,7 @@
               </div>
               <img
                 class="group-img"
-                src="./images/sectionServices.jpg"
+                src="./images/section-services.jpg"
                 alt="изображение девушки"
                 width="234"
                 height="368"
